--- a/blocks/footer/view.html
+++ b/blocks/footer/view.html
@@ -1,4 +1,4 @@
 <!-- Footer-->
 <footer class="bg-light py-5">
-    <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+    <div class="container"><div class="small text-center text-muted">Copyright © 2020-2021 - Bandira Addis Map Entertainent PLC, Start Bootstrap</div></div>
 </footer>
